--- a/.github/workflows/pygbag.yml
+++ b/.github/workflows/pygbag.yml
@@ -1,6 +1,5 @@
-
 name: pygbag_build
-on: [workflow_dispatch]
+on: [ workflow_dispatch ]
 
 
 jobs:
@@ -9,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Checkout
-      run: |
-            python -m pip install pygbag
-            python -m pygbag --build $GITHUB_WORKSPACE/main.py
-    - name : "Upload to GitHub pages branch gh-pages"
-      uses: JamesIves/github-pages-deploy-action@4.1.7
-      with:
-        branch: gh-pages
-        folder: build/web
+      - uses: actions/checkout@v2
+      - name: Checkout
+        run: |
+          python -m pip install pygbag
+          python -m pygbag --ume_block=0 --build $GITHUB_WORKSPACE/main.py
+      - name: "Upload to GitHub pages branch gh-pages"
+        uses: JamesIves/github-pages-deploy-action@4.1.7
+        with:
+          branch: gh-pages
+          folder: build/web
